--- a/tex/Algebra/Group Theory.tex
+++ b/tex/Algebra/Group Theory.tex
@@ -25,7 +25,7 @@
 	\paragraph*{identity} $\exists e \in G \suchthat \forall x \in G, e*x = x*e = x$;
 	\paragraph*{inverse} $\forall x \in G, \exists x^{-1} \in G \suchthat x * x^{-1} = x^{-1} * x = e$.\\\\
 	These are known as the \textbf{group axioms}.
-	}
+	}\label{def:group}
 	
 	
 	
