--- a/tex/Algebra/Vector Spaces.tex
+++ b/tex/Algebra/Vector Spaces.tex
@@ -174,7 +174,7 @@
 	
 	
 	\bigskip
-	\searchableSubsection{The notation $F^S$}{vector spaces}{\bigskip
+	\searchableSubsection{The notation $F^S$}{vector spaces}{\label{ssection:notation-S-dimensional-F-space} \bigskip
 	\notation{If $S$ is a set then $\bm{F^S}$ denotes the set of functions $S \mapsto F$.}
 	
 	\paragraph{Addition} is defined as, for $f, g, (f + g) \in F^S$,
