--- a/tex/Pure Mathematics.tex
+++ b/tex/Pure Mathematics.tex
@@ -8,9 +8,14 @@
 	\maketitle
 	
 	\chapter{Foundations}\clearpage
+	\searchableSection{Discrete Maths}{set theory, logic}
 	\subfile{\foundationsDir/Axioms}
 	\newpage
-	\subfile{"\foundationsDir/Number Theory"}
+	\subfile{\foundationsDir/Logic}
+	\newpage
+	\subfile{\foundationsDir/Functions}
+	\newpage
+	\subfile{"\foundationsDir/Numbers"}
 	\newpage
 	
 	\searchableChapter{Algebra}{abstract algebra, complex numbers}\clearpage
